--- a/iot-services.html
+++ b/iot-services.html
@@ -218,7 +218,7 @@
                 <div id="nav_menuo">
                     <ul id="navyo" class="clearfixo">
                         <li class="normal_menuo mobile_menu_toggleo">
-                            <a href="#"><span><p>Home</p></span></a>
+                            <a href="/"><span><p>Home</p></span></a>
                         </li>
                         <li class="has_mega_menuo mobile_menu_toggleo current_page_itemo">
                              <a href="#"><span><p class="activeNavBoxo">Services</p></span></a>
