--- a/blogs.html
+++ b/blogs.html
@@ -136,14 +136,14 @@
                                         <li><a href="it-services.html"><span>IT Services</span></a></li>
                                         <li><a href="iot-services.html"><span>IOT</span></a></li>
                                         <li class="blogs-has_sub_sub_menu">
-                                            <a href="./ai_development_services/ai_development_service.html">
+                                            <a href="ai_development_services/ai_development_service.html">
                                                 <span>AI</span>
                                             </a>
                                             <button class="blogs-dropdown-toggle">+</button>
                                             <ul>
                                                 <li><a href="#"><span>AI Powered No Code Low Code</span></a></li>
-                                                <li><a href="./business analytics/ai-business-analytics.html"><span>AI Powered Business Analytics</span></a></li>
-                                                <li><a href="./business automation/index.html"><span>AI Powered Office Automation</span></a></li>
+                                                <li><a href="business-analytics/ai-business-analytics.html"><span>AI Powered Business Analytics</span></a></li>
+                                                <li><a href="business-automation/business-automation.html"><span>AI Powered Office Automation</span></a></li>
                                             </ul>
                                         </li>
                                     </ul>
@@ -163,7 +163,7 @@
                             </ul>
                         </li>
                         <li class="blogs-normal_menu blogs-mobile_menu_toggle">
-                            <a href="./contact/contact-us.html"><span>Contact Us</span></a>
+                            <a href="contact/contact-us.html"><span>Contact Us</span></a>
                         </li>
                         <li class="blogs-normal_menu blogs-mobile_menu_toggle">
                             <a href="blogs.html"><span><p  class="blogs-activeNavBox">Blogs</p></span></a>
