linking of footer and header

--- a/ai_development_services/ai_development_service.html
+++ b/ai_development_services/ai_development_service.html
@@ -440,7 +440,7 @@
                 <ul>
                   <li><a href="../about-us.html">About Us</a></li>
                   <li><a href="../clients.html">Clients</a></li>
-                  <li><a href="../career">Careers</a></li>
+                  <li><a href="#">Careers</a></li>
                   <li><a href="https://ethicalintelligent.com/blogs">Blogs</a></li>
                 </ul>
               </div>
@@ -450,9 +450,9 @@
                 <ul>
                   <li><a href="../it-services.html">IT Services</a></li>
                   <li><a href="../iot-services.html">IOT</a></li>
-                  <li><a href="../AI-office-automation">AI Office Automation</a></li>
-                  <li><a href="../AI-Business-analytics">AI Business Analytics</a></li>
-                  <li><a href="../AI no-code/low-code">AI no-code/low-code</a></li>
+                  <li><a href="../business-automation/business-automation.html">AI Office Automation</a></li>
+                  <li><a href="../business-analytics/ai-business-analytics.html">AI Business Analytics</a></li>
+                  <li><a href="#">AI no-code/low-code</a></li>
                 </ul>
               </div>
     
