--- a/iot-services.html
+++ b/iot-services.html
@@ -1178,9 +1178,9 @@ Assess driving patterns to promote safety, reduce accidents, and lower maintenan
               <div class="footer-links">
                 <h4>Company</h4>
                 <ul>
-                  <li><a href="../about-us.html">About Us</a></li>
-                  <li><a href="../clients.html">Clients</a></li>
-                  <li><a href="../career">Careers</a></li>
+                  <li><a href="about-us.html">About Us</a></li>
+                  <li><a href="clients.html">Clients</a></li>
+                  <li><a href="#">Careers</a></li>
                   <li><a href="https://ethicalintelligent.com/blogs">Blogs</a></li>
                 </ul>
               </div>
@@ -1188,14 +1188,13 @@ Assess driving patterns to promote safety, reduce accidents, and lower maintenan
               <div class="footer-links">
                 <h4>Solutions</h4>
                 <ul>
-                  <li><a href="../it-services.html">IT Services</a></li>
-                  <li><a href="../iot-services.html">IOT</a></li>
-                  <li><a href="../AI-office-automation">AI Office Automation</a></li>
-                  <li><a href="../AI-Business-analytics">AI Business Analytics</a></li>
-                  <li><a href="../AI no-code/low-code">AI no-code/low-code</a></li>
+                  <li><a href="it-services.html">IT Services</a></li>
+                  <li><a href="iot-services.html">IOT</a></li>
+                  <li><a href="business-automation/business-automation.html">AI Office Automation</a></li>
+                  <li><a href="business-analytics/ai-business-analytics.html">AI Business Analytics</a></li>
+                  <li><a href="#">AI no-code/low-code</a></li>
                 </ul>
               </div>
-    
               <div class="footer-contact">
                 <h4>Contact</h4>
                 <div class="contact-item">
