low code no code page setup and linking

--- a/blogs.html
+++ b/blogs.html
@@ -141,7 +141,7 @@
                                             </a>
                                             <button class="blogs-dropdown-toggle">+</button>
                                             <ul>
-                                                <li><a href="#"><span>AI Powered No Code Low Code</span></a></li>
+                                                <li><a href="no_code_low_code_index.html"><span>AI Powered No Code Low Code</span></a></li>
                                                 <li><a href="business-analytics/ai-business-analytics.html"><span>AI Powered Business Analytics</span></a></li>
                                                 <li><a href="business-automation/business-automation.html"><span>AI Powered Office Automation</span></a></li>
                                             </ul>
@@ -325,10 +325,10 @@
               <div class="footer-links">
                 <h4>Company</h4>
                 <ul>
-                  <li><a href="../about-us.html">About Us</a></li>
-                  <li><a href="../clients.html">Clients</a></li>
+                  <li><a href="about-us.html">About Us</a></li>
+                  <li><a href="clients.html">Clients</a></li>
                   <li><a href="#">Careers</a></li>
-                  <li><a href="https://ethicalintelligent.com/blogs">Blogs</a></li>
+                  <li><a href="blogs.html">Blogs</a></li>
                 </ul>
               </div>
     
