--- a/clients.html
+++ b/clients.html
@@ -126,12 +126,12 @@
                                         <li><a href="it-services.html"><span>IT Services</span></a></li>
                                         <li><a href="iot-services.html"><span>IOT</span></a></li>
                                         <li class="has_sub_sub_menuo">
-                                            <a href="./ai_development_services/ai_development_service.html"><span>AI</span></a>
+                                            <a href="ai_development_services/ai_development_service.html"><span>AI</span></a>
                                             <button class="dropdown-toggleo">+</button>
                                             <ul>
-                                                <li><a href="#"><span>AI Powered No Code Low Code</span></a></li>
-                                                <li><a href="./business-analytics/ai-business-analytics.html"><span>AI Powered Business Analytics</span></a></li>
-                                                <li><a href="./business-automation/business-automation.html"><span>AI Powered Office Automation</span></a></li>
+                                                <li><a href="no_code_low_code_index.html"><span>AI Powered No Code Low Code</span></a></li>
+                                                <li><a href="business-analytics/ai-business-analytics.html"><span>AI Powered Business Analytics</span></a></li>
+                                                <li><a href="business-automation/business-automation.html"><span>AI Powered Office Automation</span></a></li>
                                             </ul>
                                         </li>
                                     </ul>
