--- a/iot-services.html
+++ b/iot-services.html
@@ -232,7 +232,7 @@
                                             <a href="ai_development_services/ai_development_service.html"><span>AI</span></a>
                                             <button class="dropdown-toggleo">+</button>
                                             <ul>
-                                                <li><a href="#"><span>AI Powered No Code Low Code</span></a></li>
+                                                <li><a href="no_code_low_code_index.html"><span>AI Powered No Code Low Code</span></a></li>
                                                 <li><a href="business-analytics/ai-business-analytics.html"><span>AI Powered Business Analytics</span></a></li>
                                                 <li><a href="business-automation/business-automation.html"><span>AI Powered Office Automation</span></a></li>
                                             </ul>
@@ -1181,7 +1181,7 @@ Assess driving patterns to promote safety, reduce accidents, and lower maintenan
                   <li><a href="about-us.html">About Us</a></li>
                   <li><a href="clients.html">Clients</a></li>
                   <li><a href="#">Careers</a></li>
-                  <li><a href="https://ethicalintelligent.com/blogs">Blogs</a></li>
+                  <li><a href="blogs.html">Blogs</a></li>
                 </ul>
               </div>
     
@@ -1192,7 +1192,7 @@ Assess driving patterns to promote safety, reduce accidents, and lower maintenan
                   <li><a href="iot-services.html">IOT</a></li>
                   <li><a href="business-automation/business-automation.html">AI Office Automation</a></li>
                   <li><a href="business-analytics/ai-business-analytics.html">AI Business Analytics</a></li>
-                  <li><a href="#">AI no-code/low-code</a></li>
+                  <li><a href="no_code_low_code_index.html">AI no-code/low-code</a></li>
                 </ul>
               </div>
               <div class="footer-contact">
