--- a/about-us.html
+++ b/about-us.html
@@ -140,12 +140,12 @@
                                         <li><a href="it-services.html"><span>IT Services</span></a></li>
                                         <li><a href="iot-services.html"><span>IOT</span></a></li>
                                         <li class="has_sub_sub_menuo">
-                                            <a href="./ai_development_services/ai_development_service.html"><span>AI</span></a>
+                                            <a href="ai_development_services/ai_development_service.html"><span>AI</span></a>
                                             <button class="dropdown-toggleo">+</button>
                                             <ul>
-                                                <li><a href="#"><span>AI Powered No Code Low Code</span></a></li>
-                                                <li><a href="./business-analytics/ai-business-analytics.html"><span>AI Powered Business Analytics</span></a></li>
-                                                <li><a href="./business-automation/business-automation.html"><span>AI Powered Office Automation</span></a></li>
+                                                <li><a href="no_code_low_code_index.html"><span>AI Powered No Code Low Code</span></a></li>
+                                                <li><a href="business-analytics/ai-business-analytics.html"><span>AI Powered Business Analytics</span></a></li>
+                                                <li><a href="business-automation/business-automation.html"><span>AI Powered Office Automation</span></a></li>
                                             </ul>
                                         </li>
                                     </ul>
@@ -518,21 +518,21 @@
               <div class="footer-links">
                 <h4>Company</h4>
                 <ul>
-                  <li><a href="../about-us.html">About Us</a></li>
-                  <li><a href="../clients.html">Clients</a></li>
-                  <li><a href="../career">Careers</a></li>
-                  <li><a href="https://ethicalintelligent.com/blogs">Blogs</a></li>
+                  <li><a href="about-us.html">About Us</a></li>
+                  <li><a href="clients.html">Clients</a></li>
+                  <li><a href="#">Careers</a></li>
+                  <li><a href="blogs.html">Blogs</a></li>
                 </ul>
               </div>
     
               <div class="footer-links">
                 <h4>Solutions</h4>
                 <ul>
-                  <li><a href="../it-services.html">IT Services</a></li>
-                  <li><a href="../iot-services.html">IOT</a></li>
-                  <li><a href="../AI-office-automation">AI Office Automation</a></li>
-                  <li><a href="../AI-Business-analytics">AI Business Analytics</a></li>
-                  <li><a href="../AI no-code/low-code">AI no-code/low-code</a></li>
+                  <li><a href="it-services.html">IT Services</a></li>
+                  <li><a href="iot-services.html">IOT</a></li>
+                  <li><a href="business-automation/business-automation.html">AI Office Automation</a></li>
+                  <li><a href="business-analytics/ai-business-analytics.html">AI Business Analytics</a></li>
+                  <li><a href="no_code_low_code_index.html">AI no-code/low-code</a></li>
                 </ul>
               </div>
     
