--- a/ai_development_services/ai_development_service.html
+++ b/ai_development_services/ai_development_service.html
@@ -441,7 +441,7 @@
                   <li><a href="../about-us.html">About Us</a></li>
                   <li><a href="../clients.html">Clients</a></li>
                   <li><a href="#">Careers</a></li>
-                  <li><a href="https://ethicalintelligent.com/blogs">Blogs</a></li>
+                  <li><a href="../blogs.html">Blogs</a></li>
                 </ul>
               </div>
     
