--- a/it-services.html
+++ b/it-services.html
@@ -264,7 +264,7 @@
                                             </a>
                                             <button class="it-services-dropdown-toggle">+</button>
                                             <ul>
-                                                <li><a href="#"><span>AI Powered No Code Low Code</span></a></li>
+                                                <li><a href="no_code_low_code_index.html"><span>AI Powered No Code Low Code</span></a></li>
                                                 <li><a href="business-analytics/ai-business-analytics.html"><span>AI Powered Business Analytics</span></a></li>
                                                 <li><a href="business-automation/business-automation.html"><span>AI Powered Office Automation</span></a></li>
                                             </ul>
@@ -1190,18 +1190,18 @@
                   <li><a href="../about-us.html">About Us</a></li>
                   <li><a href="../clients.html">Clients</a></li>
                   <li><a href="../career">Careers</a></li>
-                  <li><a href="https://ethicalintelligent.com/blogs">Blogs</a></li>
+                  <li><a href="blogs.html">Blogs</a></li>
                 </ul>
               </div>
     
               <div class="footer-links">
                 <h4>Solutions</h4>
                 <ul>
-                  <li><a href="../it-services.html">IT Services</a></li>
-                  <li><a href="../iot-services.html">IOT</a></li>
-                  <li><a href="../AI-office-automation">AI Office Automation</a></li>
-                  <li><a href="../AI-Business-analytics">AI Business Analytics</a></li>
-                  <li><a href="../AI no-code/low-code">AI no-code/low-code</a></li>
+                  <li><a href="it-services.html">IT Services</a></li>
+                  <li><a href="iot-services.html">IOT</a></li>
+                  <li><a href="business-automation/business-automation.html">AI Office Automation</a></li>
+                  <li><a href="business-analytics/ai-business-analytics.html">AI Business Analytics</a></li>
+                  <li><a href="no_code_low_code_index.html">AI no-code/low-code</a></li>
                 </ul>
               </div>
     
