no code low code page set design

--- a/no_code_low_code_index.html
+++ b/no_code_low_code_index.html
@@ -702,7 +702,7 @@
                                 </ul>
                             </li>
                             <li class="normal_menu mobile_menu_toggle">
-                                <a href="contact-us.html"><span>Contact Us</span></a>
+                                <a href="contact/contact-us.html"><span>Contact Us</span></a>
                             </li>
                             <li class="normal_menu mobile_menu_toggle">
                                 <a href="blogs.html"><span>Blogs</span></a>
@@ -1002,7 +1002,7 @@
               <div class="footer-cta">
                 <h3>Let's Work Together!</h3>
                 <p>Have a project in mind? Let's build something great together.</p>
-                <a href="../contact-us.html" class="footer-button">Contact Us</a>
+                <a href="contact/contact-us.html" class="footer-button">Contact Us</a>
                 <p class="footer-cta-subtext">Start a conversation with our experts and discover how our AI-powered solutions can transform your business.</p>
               </div>
             </div>
@@ -1035,11 +1035,11 @@
               <div class="footer-links">
                 <h4>Solutions</h4>
                 <ul>
-                  <li><a href="../it-services.html">IT Services</a></li>
-                  <li><a href="../iot-services.html">IOT</a></li>
-                  <li><a href="../business-automation/business-automation.html">AI Office Automation</a></li>
-                  <li><a href="../business-analytics/ai-business-analytics.html">AI Business Analytics</a></li>
-                  <li><a href="#">AI no-code/low-code</a></li>
+                  <li><a href="it-services.html">IT Services</a></li>
+                  <li><a href="iot-services.html">IOT</a></li>
+                  <li><a href="business-automation/business-automation.html">AI Office Automation</a></li>
+                  <li><a href="business-analytics/ai-business-analytics.html">AI Business Analytics</a></li>
+                  <li><a href="no_code_low_code_index.html">AI no-code/low-code</a></li>
                 </ul>
               </div>
     
